Building out File Upload, download and versioning pages.

--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Client/Client.razor
@@ -174,15 +174,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <Alert Color="(Color)alertModel.AlertType" @bind-Visible="@alertModel.ShowAlert" Dismisable="true">
-                                    <AlertMessage>
-                                        @alertModel.AlertMessage
-                                    </AlertMessage>
-                                    <AlertDescription>
-                                        @alertModel.AlertDescription
-                                    </AlertDescription>
-                                    <CloseButton />
-                                </Alert>
+                                <PLAlert includeSnackBar="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
@@ -210,7 +202,7 @@
     LangQueryList langQueryList { get; set; }
     ClientHead clientHead { get; set; }
     IEnumerable<SelectListModel> StatusSelectListValues { get; set; }
-    AlertModel alertModel = new AlertModel();
+    PLAlert plAlert { get; set; }
     bool SavingClient = false;
     PageProgressBar pageProgressBar;
     bool loadingPage = true;
@@ -305,9 +297,8 @@
         SavingClient = true;
         var saveResult = await SaveClient();
 
-        alertModel.ShowAlert = true;
-        alertModel.AlertType = saveResult.Item1 ? (int)Color.Success : (int)Color.Danger;
-        alertModel.AlertMessage = saveResult.Item2;
+        plAlert.ShowAlert(saveResult.Item1, saveResult.Item2);
+
         SavingClient = false;
     }
 
