--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskGroup.razor
@@ -172,15 +172,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <Alert Color="(Color)alertModel.AlertType" @bind-Visible="@alertModel.ShowAlert" Dismisable="true">
-                                    <AlertMessage>
-                                        @alertModel.AlertMessage
-                                    </AlertMessage>
-                                    <AlertDescription>
-                                        @alertModel.AlertDescription
-                                    </AlertDescription>
-                                    <CloseButton />
-                                </Alert>
+                                <PLAlert includeSnackBar="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
@@ -213,7 +205,7 @@
     IEnumerable<SelectListModel> TeamSelectListValues { get; set; }
     IEnumerable<SelectListModel> ClientSelectListValues { get; set; }
     IEnumerable<SelectListModel> UserSelectListValues { get; set; }
-    AlertModel alertModel = new AlertModel();
+    PLAlert plAlert { get; set; }
     bool SavingTaskGroupHead = false;
     CustomFieldGroupLink customFieldGroupLink;
 
@@ -301,11 +293,9 @@
         SavingTaskGroupHead = true;
         var saveResult = await SaveTaskGroupHeadAsync();
 
-        alertModel.ShowAlert = true;
-        alertModel.AlertType = saveResult.Item1 ? (int)Color.Success : (int)Color.Danger;
-        alertModel.AlertMessage = saveResult.Item2;
+        plAlert.ShowAlert(saveResult.Item1, saveResult.Item2);
 
-        if(saveResult.Item1)
+        if (saveResult.Item1)
         {
             await customFieldGroupLink.SaveFieldGroup(taskGroupHead.Id);
         }
