--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/PLTask/TaskView.razor
@@ -190,7 +190,13 @@
         textCodes.Add(10928);
         textCodes.Add(10930);
         textCodes.Add(10931);
+        textCodes.Add(10932);
         textCodes.Add(10935);
+        textCodes.Add(10936);
+        textCodes.Add(10937);
+        textCodes.Add(10938);
+        textCodes.Add(10939);
+        textCodes.Add(10940);
         textCodes.Add(10942);
         textCodes.Add(10943);
         textCodes.Add(11001);
