--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskGroupEdit.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Shared/TaskList/TaskGroupEdit.razor
@@ -108,15 +108,7 @@
             <ModalFooter>
                 <Row>
                     <Column ColumnSize="ColumnSize.Is12">
-                        <Alert Color="(Color)alertModel.AlertType" @bind-Visible="@alertModel.ShowAlert" Dismisable="true">
-                            <AlertMessage>
-                                @alertModel.AlertMessage
-                            </AlertMessage>
-                            <AlertDescription>
-                                @alertModel.AlertDescription
-                            </AlertDescription>
-                            <CloseButton />
-                        </Alert>
+                        <PLAlert includeSnackBar="true" @ref="plAlert" />
                     </Column>
                 </Row>
                 <Row>
@@ -154,7 +146,7 @@
     IEnumerable<SelectListModel> UserSelectListValues { get; set; }
     private Modal taskGroupForm;
     bool SavingTaskGroupHead = false;
-    AlertModel alertModel = new AlertModel();
+    PLAlert plAlert { get; set; }
     CustomFieldGroupLink customFieldGroupLink;
 
     protected override async Task OnInitializedAsync()
@@ -231,9 +223,7 @@
         SavingTaskGroupHead = true;
         var saveResult = await SaveTaskGroupHeadAsync();
 
-        alertModel.ShowAlert = true;
-        alertModel.AlertType = saveResult.Item1 ? (int)Color.Success : (int)Color.Danger;
-        alertModel.AlertMessage = saveResult.Item2;
+        plAlert.ShowAlert(saveResult.Item1, saveResult.Item2);
 
         if (saveResult.Item1)
         {
