--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Setting/UserSettings.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/Setting/UserSettings.razor
@@ -47,15 +47,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <Alert Color="(Color)alertModel.AlertType" @bind-Visible="@alertModel.ShowAlert" Dismisable="true">
-                                    <AlertMessage>
-                                        @alertModel.AlertMessage
-                                    </AlertMessage>
-                                    <AlertDescription>
-                                        @alertModel.AlertDescription
-                                    </AlertDescription>
-                                    <CloseButton />
-                                </Alert>
+                                <PLAlert includeSnackBar="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
@@ -77,7 +69,7 @@
     bool loadingPage = true;
     IEnumerable<SelectListModel> StatusSelectListValues { get; set; }
     IEnumerable<SelectListModel> LanguageCodeSelectListValues { get; set; }
-    AlertModel alertModel = new AlertModel();
+    PLAlert plAlert { get; set; }
     bool SavingUserSetting = false;
 
     protected override async Task OnInitializedAsync()
@@ -120,9 +112,7 @@
         if (saveResult.Item1)
             UserAppCache.SetLanguageCode(await MyFoundationService.GetLanguageCode(TokenProvider.AccessToken));
 
-        alertModel.ShowAlert = true;
-        alertModel.AlertType = saveResult.Item1 ? (int)Color.Success : (int)Color.Danger;
-        alertModel.AlertMessage = saveResult.Item2;
+        plAlert.ShowAlert(saveResult.Item1, saveResult.Item2);
         SavingUserSetting = false;
     }
 
