--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/User/User.razor
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/Pages/User/User.razor
@@ -243,15 +243,7 @@
                     <CardBody>
                         <Row>
                             <Column ColumnSize="ColumnSize.Is12">
-                                <Alert Color="(Color)alertModel.AlertType" @bind-Visible="@alertModel.ShowAlert" Dismisable="true">
-                                    <AlertMessage>
-                                        @alertModel.AlertMessage
-                                    </AlertMessage>
-                                    <AlertDescription>
-                                        @alertModel.AlertDescription
-                                    </AlertDescription>
-                                    <CloseButton />
-                                </Alert>
+                                <PLAlert includeSnackBar="true" @ref="plAlert" />
                             </Column>
                         </Row>
                         <Row>
@@ -284,7 +276,7 @@
 
     IEnumerable<SelectListModel> StatusSelectListValues { get; set; }
     IEnumerable<SelectListModel> TeamSelectListValues { get; set; }
-    AlertModel alertModel = new AlertModel();
+    PLAlert plAlert { get; set; }
     bool SavingUser = false;
     PageProgressBar pageProgressBar;
     bool loadingPage = true;
@@ -381,9 +373,7 @@
         SavingUser = true;
         var saveResult = await SaveUser();
 
-        alertModel.ShowAlert = true;
-        alertModel.AlertType = saveResult.Item1 ? (int)Color.Success : (int)Color.Danger;
-        alertModel.AlertMessage = saveResult.Item2;
+        plAlert.ShowAlert(saveResult.Item1, saveResult.Item2);
         SavingUser = false;
     }
 
